Fix search target dropdown alignment

--- a/app/assets/stylesheets/modules/search-bar.scss
+++ b/app/assets/stylesheets/modules/search-bar.scss
@@ -66,6 +66,7 @@
       display: inline-block;
       margin: 30px 0 0;
       padding: 0;
+      text-indent: 0;
     }
   }
 
